# OxiDiviner

./: .gitignore  API_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CODE_COVERAGE_REPORT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES_COMPLETE.md  Enhancements.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  GUIDELINES.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  PROJECT_COMPLETION.md  PUBLISHING_PLAN.md  README.md  RELEASE_v1.0.0_SUMMARY.md  SEPARATE_MODULES_SUMMARY.md  SUBCRATE_REMOVAL_COMPLETE.md  publish_crates.sh  run_coverage.sh  tarpaulin.toml  update_examples.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: accuracy_improvements_benchmark.rs
docs/: building_strategies.md  implementation_status_report.md  multi_parameter_adaptive_implementation_plan.md  user_guide.md
examples/: Cargo.toml  README.md  accuracy_improvements.rs  accuracy_improvements_demo.rs  accuracy_measurement.rs  advanced_diagnostics_demo.rs  api_improvements_demo.rs  basic_working_demo.rs  enhanced_regime_switching_demo.rs  ets_demo.rs  ets_model_demo.rs  heston_stochastic_volatility_demo.rs  holt_demo.rs  holt_winters_demo.rs  improved_api_demo.rs  ohlcv_forecasting_example.rs  optimization_demo.rs  phase1_features_demo.rs  quick_start.rs  quick_start_improved.rs  sabr_volatility_demo.rs  ses_demo.rs  simple_api_demo.rs  simple_demo.rs  standard_interface_demo.rs
examples/autoregressive-models/: autoregressive_demo.rs  ma_demo.rs
examples/csv/: aapl_daily.csv  daily_data.csv  minute_data.csv  msft_daily.csv  nvda_daily.csv
examples/exponential-smoothing-models/: es_models_comparison.rs  es_parameter_tuning.rs  ets_demo.rs  ets_model_complete.rs  ets_model_demo.rs  ets_simple_demo.rs  holt_demo.rs  holt_winters_demo.rs  ses_demo.rs  ses_model_example.rs  ses_parameter_tuning.rs
examples/garch-models/: basic_garch_example.rs  stock_volatility_analysis.rs
examples/ohlcv-handling/: data_processor.rs
examples/scripts/: simple_forecast.rs
oxidiviner/: Cargo.toml  README.md
oxidiviner-autoregressive/: Cargo.toml  README.md
oxidiviner-autoregressive/examples/: autoregressive_demo.rs
oxidiviner-autoregressive/src/: ar.rs  arima.rs  arma.rs  error.rs  lib.rs  sarima.rs  var.rs
oxidiviner-core/: Cargo.toml  README.md
oxidiviner-core/src/: data.rs  error.rs  lib.rs  validation.rs
oxidiviner-exponential-smoothing/: Cargo.toml  README.md
oxidiviner-exponential-smoothing/src/: damped_trend.rs  error.rs  ets.rs  holt.rs  holt_winters.rs  lib.rs  simple.rs  time_based_models.rs
oxidiviner-garch/: Cargo.toml  README.md
oxidiviner-garch/src/: egarch.rs  error.rs  garch.rs  garch_m.rs  gjr_garch.rs  lib.rs
oxidiviner-math/: Cargo.toml  README.md
oxidiviner-math/src/: error.rs  lib.rs  metrics.rs  statistics.rs  transforms.rs
oxidiviner-moving-average/: Cargo.toml  README.md
oxidiviner-moving-average/src/: error.rs  lib.rs  model.rs
oxidiviner/docs/: step1_completion_report.md  step2_completion_report.md
oxidiviner/examples/: README.md  advanced_forecasting_models.rs  ar_example.rs  arima_example.rs  enhanced_api_demo.rs  exponential_smoothing_example.rs  garch_example.rs  kou_jump_diffusion_demo.rs  merton_jump_diffusion_demo.rs  moving_average_example.rs  quick_test.rs  step1_adaptive_config_example.rs  step2_regime_detection_example.rs  step3_quality_monitoring_example.rs  step4_adaptive_forecaster_example.rs  step5_integration_example.rs
oxidiviner/src/: api.rs  batch.rs  ensemble.rs  financial.rs  lib.rs  lib.rs.backup  optimization.rs  quick.rs
oxidiviner/src/adaptive/: config.rs  core.rs  forecaster.rs  mod.rs  monitoring.rs  quality_system.rs  regime_detection.rs
oxidiviner/src/core/: data.rs  diagnostics.rs  error.rs  mod.rs  optimization.rs  persistence.rs  streaming.rs  validation.rs
oxidiviner/src/math/: metrics.rs  mod.rs  transforms.rs
oxidiviner/src/models/: mod.rs
oxidiviner/src/models/autoregressive/: ar.rs  arima.rs  arma.rs  error.rs  mod.rs  sarima.rs  var.rs
oxidiviner/src/models/cointegration/: mod.rs  vecm.rs
oxidiviner/src/models/copula/: archimedean_copula.rs  gaussian_copula.rs  mod.rs  t_copula.rs
oxidiviner/src/models/decomposition/: mod.rs  stl.rs
oxidiviner/src/models/exponential_smoothing/: damped_trend.rs  error.rs  ets.rs  holt.rs  holt_winters.rs  simple.rs  time_based_models.rs
oxidiviner/src/models/financial/: heston_stochastic_volatility.rs  kou_jump_diffusion.rs  merton_jump_diffusion.rs  mod.rs  sabr_volatility.rs
oxidiviner/src/models/garch/: egarch.rs  error.rs  garch.rs  garch_m.rs  gjr_garch.rs  mod.rs
oxidiviner/src/models/moving_average/: error.rs  model.rs
oxidiviner/src/models/nonlinear/: mod.rs  tar.rs
oxidiviner/src/models/regime_switching/: higher_order_regime_switching.rs  markov_switching.rs  mod.rs  multivariate_markov_switching.rs
oxidiviner/src/models/state_space/: kalman_filter.rs  mod.rs
oxidiviner/tests/: integration_tests.rs  prelude_tests.rs  step1_adaptive_config_tests.rs  step2_regime_detection_tests.rs  step3_quality_monitoring_tests.rs  step4_adaptive_forecaster_tests.rs
src/: data.rs  error.rs  indicators.rs  lib.rs  main.rs  utils.rs
src/adaptive/: regime_detection.rs
src/models/: data.rs  mod.rs
src/models/exponential_smoothing/: mod.rs
src/models/exponential_smoothing/ets/: daily.rs  minute.rs  mod.rs
src/models/exponential_smoothing/holt/: mod.rs  model.rs
src/models/exponential_smoothing/holt_winters/: mod.rs  model.rs
src/models/exponential_smoothing/simple/: mod.rs  model.rs
src/models/moving_average/: mod.rs
tests/: data_tests.rs  enhanced_api_tests.rs  ets_tests.rs  exponential_smoothing_ets_tests.rs  garch_tests.rs  garch_variants_tests.rs  holt_tests.rs  holt_winters_tests.rs  ses_tests.rs
