[workspace]
members = [
    "oxidiviner-core",
    "oxidiviner-math",
    "oxidiviner-moving-average",
    "oxidiviner-exponential-smoothing",
    "oxidiviner-autoregressive",
    "oxidiviner-garch",
    "oxidiviner",
    "examples",
]
resolver = "2"

[workspace.package]
name = "OxiDiviner"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["OxiDiviner Team"]
description = "A comprehensive Rust library for time series analysis and forecasting including moving average, exponential smoothing, autoregressive, and GARCH models"
repository = "https://github.com/rustic-ml/OxiDiviner"
homepage = "https://github.com/rustic-ml/OxiDiviner"
documentation = "https://docs.rs/oxidiviner"
keywords = ["time-series", "forecasting", "statistics", "analysis", "data"]
categories = ["science", "mathematics", "algorithms", "finance"]
exclude = [
    ".cursor/**",
    "Cargo.lock",
    "target/**",
    "*.JPG",
    "update_examples.sh",
    ".git/**",
    ".gitignore",
    "GUIDELINES.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
]

[workspace.dependencies]
chrono = { version = ">=0.4.41", features = ["serde"] }
rand = ">=0.9.1"
statrs = ">=0.18.0"
plotters = { version = ">=0.3.7" }
polars = { version = ">=0.47.1", features = ["lazy", "dtype-full"] }
thiserror = ">=2.0.12"
ndarray = { version = ">=0.16.1" }
serde = { version = ">=1.0.219", features = ["derive"] }
