[workspace]
members = [
    "oxidiviner",
    "examples",
]
resolver = "2"

# Document all workspace crates but only publish oxidiviner
[workspace.metadata]
docs-rs-all-features = true
publish-only-main-crate = true

# Code coverage configuration for tarpaulin
[workspace.metadata.tarpaulin]
timeout = "300s"
out = ["Html", "Lcov", "Stdout"]
output-dir = "target/coverage"
exclude = [
    # Development and documentation files
    "*.md",
    "*.jpg", 
    "*.jpeg",
    "*.png",
    "*.gif",
    ".gitignore",
    ".codecov.yml",
    
    # Build artifacts and temporary files
    "target/**/*",
    "Cargo.lock",
    "*.profraw",
    "*.bak",
    
    # CI/CD and development tools
    ".github/**/*",
    ".git/**/*",
    "run_coverage.sh",
    
    # Examples and test data
    "examples/**/*",
    "csv/**/*",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
license = "MIT"
authors = ["OxiDiviner Team"]
readme = "README.md"
description = "A comprehensive Rust library for time series analysis and forecasting including moving average, exponential smoothing, autoregressive, and GARCH models"
repository = "https://github.com/rustic-ml/OxiDiviner"
homepage = "https://github.com/rustic-ml/OxiDiviner"
documentation = "https://docs.rs/oxidiviner"
keywords = ["time-series", "forecasting", "statistics", "analysis", "data"]
categories = ["science", "mathematics", "algorithms", "finance"]
exclude = [
    ".cursor/**",
    "Cargo.lock",
    "target/**",
    "update_examples.sh",
    ".git/**",
    ".gitignore",
    "GUIDELINES.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
]

[workspace.dependencies]
chrono = { version = ">=0.4.41", features = ["serde"] }
rand = ">=0.9.1"
statrs = ">=0.18.0"
plotters = { version = ">=0.3.7" }
polars = { version = ">=0.47.1", features = ["lazy", "dtype-full"] }
thiserror = ">=2.0.12"
ndarray = { version = ">=0.16.1" }
serde = { version = ">=1.0.219", features = ["derive"] }

[profile.test]
opt-level = 1
debug = true
