[workspace]
members = [
    "oxidiviner",
    "examples",
]
resolver = "2"

[workspace.metadata]
docs-rs-all-features = true
publish-only-main-crate = true

[workspace.metadata.tarpaulin]
timeout = "300s"
out = ["Html", "Lcov", "Stdout"]
output-dir = "target/coverage"
exclude = [
    # Development and IDE files
    ".cursor/**",
    ".vscode/**",
    ".idea/**",
    ".cargo/**",

    "target/",
    
    # Version control and CI/CD
    ".git/**",
    ".github/**",
    ".gitignore",
    
    # Build artifacts and dependencies
    "target/**",
    "Cargo.lock",
    
    # Development documentation and summaries
    "Enhancements.md",
    "CODE_OPTIMIZATION_SUMMARY.md",
    "CHANGELOG.md",
    "FIXES_SUMMARY.md",
    "COMPLETION_SUMMARY.md",
    "CODE_COVERAGE_REPORT.md",
    "EXAMPLES_COMPLETE.md",
    "MIGRATION_COMPLETE.md",
    "SEPARATE_MODULES_SUMMARY.md",
    "SUBCRATE_REMOVAL_COMPLETE.md",
    "MIGRATION_SUMMARY.md",
    "PUBLISHING_PLAN.md",
    "FINAL_SUMMARY.md",
    "GUIDELINES.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    
    # Development scripts and configuration
    "run_coverage.sh",
    "publish_crates.sh",
    "update_examples.sh",
    "tag_version.sh",
    "tarpaulin.toml",
    
    # Images and media files
    "*.JPG",
    "*.jpg",
    "*.jpeg", 
    "*.png",
    "*.gif",
    "OxiDiviner*.JPG",
    
    # Coverage and profiling files
    "target/coverage/**",
    "target/tarpaulin/**",
    "*.profraw",
    "tarpaulin-report.html",
    "lcov.info",
    "coverage.json",
    "*.bak",
    
    # Development documentation
    "docs/**",
    
    # Integration tests (keep unit tests in src/)
    "tests/**",
    
    # OS-specific files
    ".DS_Store",
    "Thumbs.db",
    "*.tmp",
    "*.temp",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["OxiDiviner Team"]
readme = "README.md"
description = "A comprehensive Rust library for time series analysis and forecasting including moving average, exponential smoothing, autoregressive, and GARCH models"
repository = "https://github.com/rustic-ml/OxiDiviner"
homepage = "https://github.com/rustic-ml/OxiDiviner"
documentation = "https://docs.rs/oxidiviner"
keywords = ["time-series", "forecasting", "statistics", "analysis", "data"]
categories = ["science", "mathematics", "algorithms", "finance"]
exclude = [
    # Development and IDE files
    ".cursor/**",
    ".vscode/**",
    ".idea/**",
    ".cargo/**",
    
    # Version control and CI/CD
    ".git/**",
    ".github/**",
    ".gitignore",
    
    # Build artifacts and dependencies
    "target/**",
    "Cargo.lock",
    
    # Development documentation and summaries
    "Enhancements.md",
    "CODE_OPTIMIZATION_SUMMARY.md",
    "CHANGELOG.md",
    "FIXES_SUMMARY.md",
    "COMPLETION_SUMMARY.md",
    "CODE_COVERAGE_REPORT.md",
    "EXAMPLES_COMPLETE.md",
    "MIGRATION_COMPLETE.md",
    "SEPARATE_MODULES_SUMMARY.md",
    "SUBCRATE_REMOVAL_COMPLETE.md",
    "MIGRATION_SUMMARY.md",
    "PUBLISHING_PLAN.md",
    "FINAL_SUMMARY.md",
    "GUIDELINES.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    
    # Development scripts and configuration
    "run_coverage.sh",
    "publish_crates.sh",
    "update_examples.sh",
    "tag_version.sh",
    "tarpaulin.toml",
    
    # Images and media files
    "*.JPG",
    "*.jpg",
    "*.jpeg", 
    "*.png",
    "*.gif",
    "OxiDiviner*.JPG",
    
    # Coverage and profiling files
    "target/coverage/**",
    "target/tarpaulin/**",
    "*.profraw",
    "tarpaulin-report.html",
    "lcov.info",
    "coverage.json",
    "*.bak",
    
    # Development documentation
    "docs/**",
    
    # Integration tests (keep unit tests in src/)
    "tests/**",
    
    # OS-specific files
    ".DS_Store",
    "Thumbs.db",
    "*.tmp",
    "*.temp",
]

[workspace.dependencies]
chrono = { version = ">=0.4.41", features = ["serde"] }
rand = "0.8"
statrs = ">=0.18.0"
plotters = { version = ">=0.3.7" }
polars = { version = ">=0.47.1", features = ["lazy", "dtype-full"] }
thiserror = ">=2.0.12"
ndarray = { version = ">=0.16.1" }
serde = { version = ">=1.0.219", features = ["derive"] }
nalgebra = ">=0.33.0"
rand_distr = "0.4"

[profile.test]
opt-level = 1
debug = true 