[package]
name = "oxidiviner-examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
oxidiviner = { path = "../oxidiviner" }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
rand_distr = "0.5.0"

# Basic Working Demo
[[bin]]
name = "basic_working_demo"
path = "basic_working_demo.rs"

# API Improvements Demo
[[bin]]
name = "api_improvements_demo"
path = "api_improvements_demo.rs"

# Simple API Demo
[[bin]]
name = "simple_api_demo"
path = "simple_api_demo.rs"

# Standard Interface Demo
[[bin]]
name = "standard_interface_demo"
path = "standard_interface_demo.rs"

# Quick Start Improved API Demo
[[bin]]
name = "quick_start_improved"
path = "quick_start_improved.rs"

# OHLCV Data Examples
[[bin]]
name = "ohlcv_forecasting_example"
path = "ohlcv_forecasting_example.rs"

# OHLCV Data Handling
[[bin]]
name = "ohlcv_data_processor"
path = "ohlcv-handling/data_processor.rs"

# Exponential Smoothing Models
[[bin]]
name = "ses_demo"
path = "exponential-smoothing-models/ses_demo.rs"

[[bin]]
name = "holt_demo"
path = "exponential-smoothing-models/holt_demo.rs"

[[bin]]
name = "holt_winters_demo"
path = "exponential-smoothing-models/holt_winters_demo.rs"

[[bin]]
name = "ets_model_complete"
path = "exponential-smoothing-models/ets_model_complete.rs"

[[bin]]
name = "es_models_comparison"
path = "exponential-smoothing-models/es_models_comparison.rs"

[[bin]]
name = "ses_parameter_tuning"
path = "exponential-smoothing-models/ses_parameter_tuning.rs"

[[bin]]
name = "es_parameter_tuning"
path = "exponential-smoothing-models/es_parameter_tuning.rs"

[[bin]]
name = "ses_model_example"
path = "exponential-smoothing-models/ses_model_example.rs"

[[bin]]
name = "ets_model_demo"
path = "exponential-smoothing-models/ets_model_demo.rs"

[[bin]]
name = "ets_demo"
path = "exponential-smoothing-models/ets_demo.rs"

# Autoregressive Models
[[bin]]
name = "autoregressive_demo"
path = "autoregressive-models/autoregressive_demo.rs"

[[bin]]
name = "ma_demo"
path = "autoregressive-models/ma_demo.rs"

# GARCH Models
[[bin]]
name = "basic_garch_example"
path = "garch-models/basic_garch_example.rs"

[[bin]]
name = "stock_volatility_analysis"
path = "garch-models/stock_volatility_analysis.rs"

# Accuracy Measurement
[[bin]]
name = "accuracy_measurement"
path = "accuracy_measurement.rs"

# Accuracy Improvements
[[bin]]
name = "accuracy_improvements"
path = "accuracy_improvements.rs"

# Phase 2: Advanced Optimization Demo
[[bin]]
name = "optimization_demo"
path = "optimization_demo.rs" 