[package]
name = "oxidiviner-autoregressive"
version = "0.1.0"
edition = "2021"
description = "Autoregressive models for the OxiDiviner time series forecasting library"
license = "MIT"
repository = "https://github.com/oxidiviner/oxidiviner"

[dependencies]
oxidiviner-core = { path = "../oxidiviner-core" }
oxidiviner-math = { path = "../oxidiviner-math" }
thiserror = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
rand = "0.9.1" 