[package]
name = "oxidiviner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core functionality for OxiDiviner time series analysis library"

[dependencies]
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
oxidiviner-math = { path = "../oxidiviner-math", version = "0.2.0" }
rand.workspace = true
ndarray = { workspace = true, optional = true }

[dev-dependencies]
oxidiviner-math = { path = "../oxidiviner-math", version = "0.2.0" }
oxidiviner-moving-average = { path = "../oxidiviner-moving-average", version = "0.2.0" }
oxidiviner-exponential-smoothing = { path = "../oxidiviner-exponential-smoothing", version = "0.2.0" }
rand = { workspace = true }
chrono = { workspace = true }

[features]
default = []
ndarray_support = ["ndarray"] 