[package]
name = "oxidiviner-garch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/rustic-ml/OxiDiviner"
documentation = "https://docs.rs/oxidiviner-garch"
keywords.workspace = true
categories.workspace = true
homepage = "https://github.com/rustic-ml/OxiDiviner"
description = "GARCH models for volatility forecasting and risk modeling in financial time series"

[dependencies]
oxidiviner-core = { path = "../oxidiviner-core", version = "0.3.0" }
oxidiviner-math = { path = "../oxidiviner-math", version = "0.3.0" }
thiserror.workspace = true
chrono.workspace = true
ndarray.workspace = true
statrs.workspace = true

[dev-dependencies]
rand.workspace = true
rand_distr = "0.5.0" 