[package]
name = "oxidiviner-garch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GARCH models for OxiDiviner time series analysis library"
publish = false

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
oxidiviner-core = { path = "../oxidiviner-core", version = "0.4.0" }
oxidiviner-math = { path = "../oxidiviner-math", version = "0.4.0" }
thiserror.workspace = true
chrono.workspace = true
ndarray.workspace = true
statrs.workspace = true

[dev-dependencies]
rand.workspace = true
rand_distr = "0.5.0" 