[package]
name = "oxidiviner-math"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mathematical utilities for time series analysis, including transformations, metrics, and statistical functions"

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
thiserror.workspace = true
statrs.workspace = true
rand.workspace = true
ndarray = { workspace = true, optional = true }

[features]
default = []
ndarray_support = ["ndarray"] 