[package]
name = "oxidiviner-moving-average"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Moving average models for OxiDiviner time series analysis library"
publish = false

[dependencies]
oxidiviner-core = { path = "../oxidiviner-core", version = "0.3.7" }
oxidiviner-math = { path = "../oxidiviner-math", version = "0.3.7" }
thiserror.workspace = true
chrono.workspace = true 