[package]
name = "oxidiviner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true 
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "A comprehensive Rust library for time series analysis and forecasting including moving average, exponential smoothing, autoregressive, and GARCH models"
publish = true

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

# Include source files for the main crate only
readme = "../README.md"
include = [
    "src/**/*",
    "tests/**/*",
    "../README.md"
]

[dependencies]
# Use path dependencies for local development with current workspace version
oxidiviner-core = { version = "0.4.2", path = "../oxidiviner-core" }
oxidiviner-math = { version = "0.4.2", path = "../oxidiviner-math" }
oxidiviner-moving-average = { version = "0.4.2", path = "../oxidiviner-moving-average" }
oxidiviner-exponential-smoothing = { version = "0.4.2", path = "../oxidiviner-exponential-smoothing" }
oxidiviner-autoregressive = { version = "0.4.2", path = "../oxidiviner-autoregressive" }
oxidiviner-garch = { version = "0.4.2", path = "../oxidiviner-garch" }
rand = "0.9.1"
rand_distr = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
