[package]
name = "oxidiviner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true 
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "A comprehensive Rust library for time series analysis and forecasting including moving average, exponential smoothing, autoregressive, and GARCH models"
publish = true

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

# Include source files for the main crate only
readme = "../README.md"
include = [
    "src/**/*",
    "tests/**/*",
    "../README.md"
]

[dependencies]
# External dependencies needed by internal modules
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
statrs.workspace = true
ndarray = { workspace = true, optional = true }
nalgebra.workspace = true
rand_distr.workspace = true
rayon = "1.8"
serde_json = "1.0"

[dev-dependencies]
rand = { workspace = true }
chrono = { workspace = true }
nalgebra = { workspace = true }
rand_distr = { workspace = true }

[features]
default = []
ndarray_support = ["ndarray"]
